--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="tarjeta__action">
                     <button class="boton video-btn" type="button" data-bs-toggle="modal"
-                      data-src="https://www.youtube.com/embed/oYU6714Vp4Q?si=AW3NxRcyo89sy020" data-bs-target="#myModal">
+                      data-src="https://www.youtube.com/embed/oYU6714Vp4Q?si=KH_9FnFGa51yh99C" data-bs-target="#myModal">
                       <span>Reproducir video</span>
                       <img src="./assets/ico-flecha.svg" />
                     </button>
