--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <article class="tarjeta p-5">
                   <div class="tarjeta__header mb-3">Información del programa</div>
                   <div class="tarjeta__body mb-4">
-                    <span class="d-block mb-2">Complementario</span>
+                    <span class="d-block mb-2">Complementaria</span>
                     <h1>Patronaje de calzado deportivo</h1>
                   </div>
                   <div class="tarjeta__action">
